--- a/package.json
+++ b/package.json
@@ -24,42 +24,45 @@
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
-    "expo": "~52.0.46",
-    "expo-blur": "~14.0.3",
-    "expo-constants": "~17.0.8",
-    "expo-dev-client": "~5.0.20",
-    "expo-font": "~13.0.4",
-    "expo-haptics": "~14.0.1",
-    "expo-linking": "~7.0.5",
-    "expo-router": "~4.0.20",
-    "expo-splash-screen": "~0.29.24",
-    "expo-status-bar": "~2.0.1",
-    "expo-symbols": "~0.2.2",
-    "expo-system-ui": "~4.0.9",
-    "expo-web-browser": "~14.0.2",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.9",
-    "react-native-gesture-handler": "~2.20.2",
+    "expo": "^53.0.0-preview.12",
+    "expo-blur": "~14.1.3",
+    "expo-constants": "~17.1.3",
+    "expo-dev-client": "~5.1.4",
+    "expo-font": "~13.2.2",
+    "expo-haptics": "~14.1.3",
+    "expo-linking": "~7.1.3",
+    "expo-router": "~5.0.2-preview.6",
+    "expo-splash-screen": "~0.30.6",
+    "expo-status-bar": "~2.2.2",
+    "expo-symbols": "~0.4.3",
+    "expo-system-ui": "~5.0.5",
+    "expo-web-browser": "~14.1.5",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.79.1",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-network-info": "^5.2.1",
     "react-native-reanimated": "^3.17.5",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
+    "react-native-safe-area-context": "5.3.0",
+    "react-native-screens": "~4.10.0",
     "react-native-tcp-socket": "^6.2.0",
     "react-native-udp": "^4.1.7",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
+    "react-native-web": "^0.20.0",
+    "react-native-webview": "13.13.5",
     "zustand": "^5.0.3"
+  },
+  "overrides": {
+    "react": "19.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.10",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.6",
+    "jest-expo": "~53.0.0",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
